<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".SingIn">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="33dp"
            tools:ignore="UselessLeaf">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/actionSI"
                android:clickable="true"
                app:backgroundTint="@color/white"
                android:tint="@color/white"
                app:srcCompat="@drawable/arrow_back_white"
                android:importantForAccessibility="no"
                android:focusable="true" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_login_your_information"
                android:alpha="0.7"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:id="@+id/emailL_ed"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="290dp"
                    android:layout_height="match_parent"
                    android:ems="15"
                    android:id="@+id/email_ed"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--            <EditText-->
            <!--                android:id="@+id/email_ed"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:hint="@string/email"-->
            <!--                android:importantForAutofill="no"-->
            <!--                android:inputType="textEmailAddress"-->
            <!--                tools:ignore="TouchTargetSizeCheck" />-->

            <!--            <TextView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:textColor="@color/red"-->
            <!--                android:text="@string/required"/>-->

            <!--            <View-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="20dp"/>-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                app:errorEnabled="true"
                android:id="@+id/passwordL_ed"
                app:errorIconDrawable="@null"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="290dp"
                    android:layout_height="match_parent"
                    android:ems="15"
                    android:id="@+id/password_ed"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--            <EditText-->
            <!--                android:id="@+id/password_ed"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:hint="@string/password"-->
            <!--                android:inputType="textPassword"-->
            <!--                android:drawableEnd="@drawable/password_icon"-->
            <!--                android:importantForAutofill="no" />-->




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--                <CheckBox-->
                <!--                    android:id="@+id/remember"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="@string/remember"-->
                <!--                    android:layout_centerVertical="true"-->
                <!--                    android:alpha="0.7"/>-->

                <TextView
                    android:id="@+id/forgetPasswordSingIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/loginBtn"
                android:text="@string/login"
                android:textSize="25sp"
                android:backgroundTint="@color/black"
                app:cornerRadius="30dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/do_not_have_account_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/don_t_have_an_account_sign_up"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="310dp"
                android:layout_height="95dp"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:importantForAccessibility="no"
                android:src="@drawable/or" />


            <!--            <TextView-->
            <!--                android:id="@+id/tvOr"-->
            <!--                android:layout_width="359dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="15dp"-->
            <!--                android:text="-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; OR &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;"-->
            <!--                android:textSize="18sp"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"/>-->

            <!--            <View-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="20dp"/>-->

            <ImageView
                android:layout_width="129dp"
                android:layout_height="45dp"
                android:id="@+id/googleImg"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:importantForAccessibility="no"
                android:src="@drawable/g_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sign_in_with_google" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="700dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/in" />

</RelativeLayout>