<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:background="@color/black"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ResetPassword">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    app:cardCornerRadius="55dp"
    android:layout_marginBottom="-30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp"
        tools:ignore="UselessLeaf">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fabReset"
            android:clickable="true"
            app:backgroundTint="@color/white"
            android:tint="@color/white"
            app:srcCompat="@drawable/arrow_back_white"
            android:importantForAccessibility="no"
            android:focusable="true" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:importantForAccessibility="no"
            android:src="@drawable/lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetPassword"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provide_your_email_for_which_you_want_to_reset_your_password"
            android:alpha="0.7"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/resetButton"
            android:text="Reset Password"
            android:textSize="25sp"
            android:backgroundTint="@color/black"
            app:cornerRadius="30dp"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>


        <!--        <com.google.android.material.button.MaterialButton-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="60dp"-->
        <!--            android:id="@+id/backButton"-->
        <!--            android:text="Back"-->
        <!--            android:drawableStart="@drawable/arrow_back_white"-->
        <!--            android:textSize="25sp"-->
        <!--            android:backgroundTint="@color/black"-->
        <!--            app:cornerRadius="30dp"/>-->

        <View
            android:layout_width="wrap_content"
            android:layout_height="60dp"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="822dp"
        android:layout_height="480dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="-47dp"
        app:srcCompat="@drawable/re" />
</RelativeLayout>